fixed carousel arrows showing up on top of nav menu on small screen widths

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6070,7 +6070,7 @@ a.badge:focus {
   top: 40%;
   left: 15px;
   width: 40px;
-  height: 100px;
+  height: 80px;
   margin-top: 0px;
   font-size: 120px;
   font-weight: 100;
@@ -6085,7 +6085,7 @@ a.badge:focus {
           border-radius: 23px;
   opacity: 0.5;
   filter: alpha(opacity=50);
-   z-index: 10;
+   z-index: 8;
 }
 
 .carousel-control.right {
